# olist-data-engineering-challenge

./: .env.example  .gitignore  .sqlfluff  README.md  design_document.md  docker-compose.yml  writeup.md
.github/workflows/: tc_data_platform_ci_cd.yml
airflow/: Dockerfile
airflow/dags/: dag_refresh_dimensions.py  dag_refresh_facts.py
data/: .gitkeep
dbt_project/: dbt_project.yml  package-lock.yml  profiles.yml
dbt_project/models/core/: _core__models.yml  dim_customers.sql  dim_date.sql  dim_exchange_rates.sql  dim_products.sql  fact_order_items.sql  fact_order_payments.sql
dbt_project/models/staging/: _staging__sources.yml  stg_customers.sql  stg_exchange_rates.sql  stg_order_items.sql  stg_order_payments.sql  stg_orders.sql  stg_products.sql
dbt_project/snapshots/: snap_customers.sql
dbt_project/tests/: assert_no_fanout.sql  reconcile_revenue.sql
evidence/: .gitkeep
ingestion/: pyproject.toml
ingestion/src/: __init__.py  config.py  fetch_exchange_rates.py  load_csv.py
ingestion/tests/: __init__.py  test_ingestion.py
reports/: .gitkeep  dax_measures.md
scripts/: download_data.py  init_db.sql  setup.ps1
